--- a/views/layouts/studentMenu.ejs
+++ b/views/layouts/studentMenu.ejs
@@ -1,16 +1,13 @@
-<div class="mb-2">
+<div class="d-flex justify-content-between mb-2 profileLane">
         
-        <div class="fs-6 py-1 pe-3 border-bottom text=muted"> <i class="fas fa-user-circle greenColor fs-6"></i> <%= capitalizeFirstLetter(username) %> </div>
-        
-</div>
+        <div class="fs-6 py-1 pe-3 border-bottom text-muted"> <i class="fas fa-user-circle greenColor fs-6"></i> <%= capitalizeFirstLetter(username) %> </div>
+        <div><a href="computer/<%= studentId %>" class="text-primary"> <button type="button" class="btn btn-sm btn-outline-secondary me-1"> Profile & Fee </button></a></div>
+<!--</div>-->
 
-<div class="d-flex justify-content-end mb-2">
-    
+<!--<div class="d-flex justify-content-end mb-2">-->
         <!-- Button trigger modal -->
-            <a href="computer/<%= studentId %>" class="text-primary"> <button type="button" class="btn btn-sm btn-outline-secondary me-1"> My Profile & Fee </button></a>
-            
-            <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              Learn Lessons
-            </button>
+<!--            <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal">-->
+<!--              Learn Lessons-->
+<!--            </button>-->
           
 </div>
