--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -113,6 +113,51 @@
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
                      <%   } %> 
+                     
+    <div class="table-responsive mb-2 mt-4 col-lg-6 col-md-6 col-xs-12">
+        
+        <table class="table table-sm bg-white shadow-sm mx-auto" style="max-width:500px">
+          
+          <thead>
+              
+             <tr>
+              
+              <td colspan="3" class="fw-normal fs-6 border bg-success text-white text-center">
+                  
+                  <i class="fas fa-chalkboard-teacher"></i> Learn Lessons </td>
+              
+            </tr>
+            
+          </thead>
+          
+          <tbody class="border">
+            
+                <tr>
+                    
+                    <td colspan="3"><a href="dcatheorywelcomepage" class="text-muted fs-6 fw-normal">
+                        <i class="fas fa-file ps-2 text-success"></i> <span class="myLink"> Learn Theory (Theory zirna) </span></a></td>
+                    
+                </tr>
+                <tr>
+                    
+                    <td colspan="3"><a href="dcapracticalwelcomepage" class="text-muted fs-6 fw-normal">
+                        <i class="fas fa-file-video ps-2 text-success"></i> <span class="myLink"> Learn Practical (Practical zirna) </span></a>
+                        </td>
+                    
+                </tr>
+                <tr>
+                    
+                    <td colspan="3"><a href="dcaDownloadMaterialPage" class="text-muted fs-6 fw-normal">
+                        <i class="fas fa-file-download ps-2 text-success"></i> <span class="myLink"> Download Study Materials </span></a>
+                        </td>
+                    
+                </tr>
+
+          </tbody>
+          
+        </table>
+        
+      </div>
         
       <div class="table-responsive mt-4 mb-2 col-lg-6 col-md-6 col-xs-12">
         
@@ -124,7 +169,7 @@
               
               <td colspan="3" class="fw-normal fs-6 bg-primary text-white border text-center">
                   
-                  <i class="fas fa-clock text-white"></i> My latest record </td>
+                  <i class="fas fa-clock text-white"></i> My Latest record </td>
               
             </tr>
             
@@ -135,7 +180,7 @@
               
               <th class="fw-normal border small">Chapter name</th>
               
-              <th class="fw-normal border small"> Last answer</th>
+              <th class="fw-normal border small"> Submit Date</th>
 
             </tr>
             
@@ -273,7 +318,7 @@
               
               <td colspan="3" class="fw-normal fs-6 border bg-success text-white text-center">
                   
-                  <i class="fas fa-user-check text-white"></i> My assignment </td>
+                  <i class="fas fa-user-check text-white"></i> My assignment record </td>
               
             </tr>
             
@@ -284,7 +329,7 @@
                 <tr>
                     
                     <td colspan="3"><a href="stdScoreboard" class="text-muted fs-6 fw-normal">
-                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> My assignment record...</span></a></td>
+                        <i class="fas fa-clipboard ps-2 text-success"></i> <span class="myLink"> Ka assignment chhan tawh dan...</span></a></td>
                     
                 </tr>
                 
@@ -294,7 +339,7 @@
         
       </div>
       
-      </div> <!--row end-->
+      
       
        <div class="table-responsive mb-2 mt-4 col-lg-6 col-md-6 col-xs-12">
         
@@ -306,7 +351,7 @@
               
               <td colspan="3" class="fw-normal fs-6 border bg-primary text-white text-center">
                   
-                  <i class="fas fa-user-check text-white"></i> Other Assignment </td>
+                  <i class="fas fa-user-check text-white"></i> Institute Record </td>
               
             </tr>
             
@@ -317,20 +362,20 @@
                 <tr>
                     
                     <td colspan="3"><a href="stdTopPerformers" class="text-muted fs-6 fw-normal">
-                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Assignment chhangtu list...</span></a></td>
+                        <i class="far fa-list-alt ps-2 text-primary"></i> <span class="myLink"> Assignment chhangtute hming...</span></a></td>
                     
                 </tr>
                 <tr>
                     
                     <td colspan="3"><a href="stdAssignmentFinished" class="text-muted fs-6 fw-normal">
-                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Assignment chhang zo tawhte...</span></a>
+                        <i class="far fa-list-alt ps-2 text-primary"></i> <span class="myLink"> Assignment chhang zo tawhte hming...</span></a>
                         </td>
                     
                 </tr>
                 <tr>
                     
                     <td colspan="3"><a href="whotesttoday" class="text-muted fs-6 fw-normal">
-                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Vawiina assignment chhangtute...</span></a>
+                        <i class="far fa-list-alt ps-2 text-primary"></i> <span class="myLink"> Vawiina assignment chhangtute hming...</span></a>
                         </td>
                     
                 </tr>
