--- a/views/studentPage.ejs
+++ b/views/studentPage.ejs
@@ -72,13 +72,13 @@
                     
                     <tr>
                       
-                      <td class="text-primary" >Name of Student</td>
+                      <td class="text-primary" >Name </td>
                       
                       <td> : </td>
                       
                       <td><%= capitalizeFirstLetter(students.username) %></td>
                       
-                      <td class="text-primary" >Father's Name</td>
+                      <td class="text-primary" >F/Name</td>
                       
                       <td> : </td>
                       
@@ -88,13 +88,13 @@
                     
                     <tr>
                       
-                      <td class="text-primary">Present Address</td>
+                      <td class="text-primary">Add </td>
                       
                       <td> : </td>
                       
                       <td><%= capitalizeFirstLetter(students.address) %></td>
                       
-                      <td class="text-primary">Mobile No. </td>
+                      <td class="text-primary">Mob </td>
                       
                       <td> : </td>
                       
@@ -104,13 +104,13 @@
                     
                     <tr>
                       
-                      <td class="text-primary">Date of Birth</td>
+                      <td class="text-primary">DoB</td>
                       
                       <td> : </td>
                       
                       <td> <%= students.dob  %></td>
                       
-                      <td class="text-primary">Registration No.</td>
+                      <td class="text-primary">Regn </td>
                       
                       <td> : </td>
                       
@@ -120,13 +120,13 @@
                     
                     <tr>
                       
-                      <td class="text-primary" > Email Id</td>
+                      <td class="text-primary" > Email </td>
                       
                       <td> : </td>
                       
                       <td> <%= students.emailId === undefined ? 'N/A' : students.emailId %></td>
                       
-                      <td class="text-primary" > Aadhar No. </td>
+                      <td class="text-primary" > Aadhar </td>
                       
                       <td> : </td>
                       
@@ -136,13 +136,13 @@
                     
                     <tr>
                       
-                      <td class="text-primary" >Batch / Session</td>
+                      <td class="text-primary" >Batch </td>
                       
                       <td> : </td>
                       
                       <td> <%= students.batchSession === undefined ? 'N/A' : capitalizeFirstLetter(students.batchSession) %></td>
                       
-                      <td class="text-primary"> Date of Online </td>
+                      <td class="text-primary"> Online </td>
                       
                       <td> : </td>
                       
