practical videos added for 103

--- a/views/layouts/officeAutomationSoftwarePracticalMenu.ejs
+++ b/views/layouts/officeAutomationSoftwarePracticalMenu.ejs
@@ -45,13 +45,13 @@
                                       
                                       <li><a class="dropdown-item" href="dca103practicalclasschapter10"> Chapter-10 (excel)</a></li>
                                       
-                                      <!--<li><a class="dropdown-item" href="dca103practicalclasschapter11"> Chapter-11 (excel)</a></li>-->
+                                      <li><a class="dropdown-item" href="dca103practicalclasschapter11"> Chapter-11 (excel)</a></li>
                                       
-                                      <!--<li><a class="dropdown-item" href="dca103practicalclasschapter12"> Chapter-12 (excel)</a></li>-->
+                                      <li><a class="dropdown-item" href="dca103practicalclasschapter12"> Chapter-12 (excel)</a></li>
                                       
-                                      <!--<li><a class="dropdown-item" href="dca103practicalclasschapter13"> Chapter-13 (excel)</a></li>-->
+                                      <li><a class="dropdown-item" href="dca103practicalclasschapter13"> Chapter-13 (excel)</a></li>
                                       
-                                      <!--<li><a class="dropdown-item" href="dca103practicalclasschapter14"> Chapter-14 (excel)</a></li>-->
+                                      <li><a class="dropdown-item" href="dca103practicalclasschapter14"> Chapter-14 (excel)</a></li>
                                       
                                       <!--<li><a class="dropdown-item" href="dca103practicalclasschapter15"> Chapter-15 (excel)</a></li>-->
                                       
