--- a/views/dca103practicalwelcomepage.ejs
+++ b/views/dca103practicalwelcomepage.ejs
@@ -164,29 +164,29 @@
                                 </div>
                                 
                                 
-                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                            <!--  <a href="dca103practicalclasschapter11"><button type="button" class="btn btn-link m-2">Chapter-11 (excel) <i class="fas fa-angle-right"></i></button></a>-->
+                              <a href="dca103practicalclasschapter11"><button type="button" class="btn btn-link m-2">Chapter-11 (excel) <i class="fas fa-angle-right"></i></button></a>
                                 
-                            <!--    </div>-->
+                                </div>
                                 
-                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                            <!--  <a href="dca103practicalclasschapter12"><button type="button" class="btn btn-link m-2">Chapter-12 (excel) <i class="fas fa-angle-right"></i></button></a>-->
+                              <a href="dca103practicalclasschapter12"><button type="button" class="btn btn-link m-2">Chapter-12 (excel) <i class="fas fa-angle-right"></i></button></a>
                                 
-                            <!--    </div>-->
+                                </div>
                                 
-                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                            <!--  <a href="dca103practicalclasschapter13"><button type="button" class="btn btn-link m-2">Chapter-13 (excel) <i class="fas fa-angle-right"></i></button></a>-->
+                              <a href="dca103practicalclasschapter13"><button type="button" class="btn btn-link m-2">Chapter-13 (excel) <i class="fas fa-angle-right"></i></button></a>
                                 
-                            <!--    </div>-->
+                                </div>
                                 
-                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                            <!--  <a href="dca103practicalclasschapter14"><button type="button" class="btn btn-link m-2">Chapter-14 (excel) <i class="fas fa-angle-right"></i></button></a>-->
+                              <a href="dca103practicalclasschapter14"><button type="button" class="btn btn-link m-2">Chapter-14 (excel) <i class="fas fa-angle-right"></i></button></a>
                                 
-                            <!--    </div>-->
+                                </div>
                                 
                             <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
                             
