photo gallery update

--- a/views/dca103practicalclasschapter1.ejs
+++ b/views/dca103practicalclasschapter1.ejs
@@ -111,7 +111,7 @@
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-1</small>
+                        <small>DCA-103 Chapter-1 By Gary Ngursangzela</small>
                       
                       </div>
                   
