--- a/views/dca103practicalclasschapter10.ejs
+++ b/views/dca103practicalclasschapter10.ejs
@@ -114,7 +114,7 @@ worksheet, exiting Excel) (1 MARK)
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-10</small>
+                        <small>DCA-103 Chapter-10 By Gary Ngursangzela</small>
                       
                       </div>
                   
