--- a/views/dca103practicalclasschapter11.ejs
+++ b/views/dca103practicalclasschapter11.ejs
@@ -112,7 +112,7 @@ calculations using formula, concept of worksheets and workbook) (2 MARKS)
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-11</small>
+                        <small>DCA-103 Chapter-11 By Gary Ngursangzela</small>
                       
                       </div>
                   
