--- a/views/dca103practicalclasschapter14.ejs
+++ b/views/dca103practicalclasschapter14.ejs
@@ -112,7 +112,7 @@ Conditional function) (2 MARKS)
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-14</small>
+                        <small>DCA-103 Chapter-14 By Gary Ngursangzela</small>
                       
                       </div>
                   
