--- a/views/dca103practicalclasschapter15.ejs
+++ b/views/dca103practicalclasschapter15.ejs
@@ -38,7 +38,7 @@
                         
                           <div class="d-flex justify-content-between m-1">
                             
-                            <button type="button" class="btn btn-sm btn-outline-secondary"> Ch-12 (Excel)</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary"> Ch-15 (Excel)</button>
                             
                               <!--include word excel powerpoint menu-->
                               
@@ -46,7 +46,7 @@
                             
                           </div>
 
-             <p class="fw-normal mx-auto mt-3">Chapter 12-ah hian <code>UNDERSTANDING CELL REFERENCING IN EXCEL</code> kan en ho dawn a ni. </p>
+             <p class="fw-normal mx-auto mt-3">Chapter 15-ah hian <code>WHAT-IF ANALYSIS AND DATA TABLES IN EXCEL</code> kan en ho dawn a ni. </p>
             
             <hr>
             
@@ -75,8 +75,9 @@
                         
                         <em>
                          
-                      Understanding Cell Referencing in Excel (Relative referencing, Absolute referencing, Mixed
-referencing) (2 MARKS)
+                    What-if Analaysis and Data Tables in Excel 
+                    (What-if analysis, Data tables, Creating a one-variable data table, 
+                    Creating a two-variable data table) (2 MARKS)
                   
                         </em> 
             
@@ -107,12 +108,12 @@ referencing) (2 MARKS)
                       
                       <div class="ratio ratio-16x9">
                         
-                          <iframe src="https://www.youtube.com/embed/ad5HrNumHHY" title="dca103 chapter-12 video" allowfullscreen></iframe>
+                          <iframe src="https://www.youtube.com/embed/547hGnMAqHc" title="dca103 chapter-15 video" allowfullscreen></iframe>
 
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-12 By Gary Ngursangzela</small>
+                        <small>DCA-103 Chapter-15 By Gary Ngursangzela </small>
                       
                       </div>
                   
