--- a/views/dca103practicalclasschapter18.ejs
+++ b/views/dca103practicalclasschapter18.ejs
@@ -38,7 +38,7 @@
                         
                           <div class="d-flex justify-content-between m-1">
                             
-                            <button type="button" class="btn btn-sm btn-outline-secondary"> Ch-12 (Excel)</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary"> Ch-18 (Powerpoint)</button>
                             
                               <!--include word excel powerpoint menu-->
                               
@@ -46,7 +46,8 @@
                             
                           </div>
 
-             <p class="fw-normal mx-auto mt-3">Chapter 12-ah hian <code>UNDERSTANDING CELL REFERENCING IN EXCEL</code> kan en ho dawn a ni. </p>
+            
+            <p class="fw-normal mx-auto mt-3">Chapter 18-ah hian <code>DIFFERENT VIEWS OF A PRESENTATION</code> kan en ho dawn a ni. </p>
             
             <hr>
             
@@ -75,8 +76,8 @@
                         
                         <em>
                          
-                      Understanding Cell Referencing in Excel (Relative referencing, Absolute referencing, Mixed
-referencing) (2 MARKS)
+                    Different Views of a Presentation (Opening an existing presentation, Switching views) (1
+MARK) 
                   
                         </em> 
             
@@ -107,12 +108,12 @@ referencing) (2 MARKS)
                       
                       <div class="ratio ratio-16x9">
                         
-                          <iframe src="https://www.youtube.com/embed/ad5HrNumHHY" title="dca103 chapter-12 video" allowfullscreen></iframe>
+                          <iframe src="https://www.youtube.com/embed/kEiGXH8v720" title="dca103 chapter-18 video" allowfullscreen></iframe>
 
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-12 By Gary Ngursangzela</small>
+                        <small>DCA-103 Chapter-18 By Gary Ngursangzela </small>
                       
                       </div>
                   
