--- a/views/dca103practicalclasschapter2.ejs
+++ b/views/dca103practicalclasschapter2.ejs
@@ -113,7 +113,7 @@ footers and page numbers) (2 MARKS)
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-2</small>
+                        <small>DCA-103 Chapter-2 By Gary Ngursangzela</small>
                       
                       </div>
                   
