--- a/views/dca103practicalclasschapter6.ejs
+++ b/views/dca103practicalclasschapter6.ejs
@@ -112,7 +112,7 @@ setting, Format painter, Inserting symbols, Using supersript and subscript) (1 M
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-6</small>
+                        <small>DCA-103 Chapter-6 By Gary Ngursangzela</small>
                       
                       </div>
                   
