--- a/views/dca103practicalclasschapter7.ejs
+++ b/views/dca103practicalclasschapter7.ejs
@@ -96,7 +96,7 @@
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-7</small>
+                        <small>DCA-103 Chapter-7 By Gary Ngursangzela</small>
                       
                       </div>
                   
