--- a/views/dca103practicalclasschapter9.ejs
+++ b/views/dca103practicalclasschapter9.ejs
@@ -112,7 +112,7 @@ Merging documents) (3 MARKS)
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-9</small>
+                        <small>DCA-103 Chapter-9 By Gary Ngursangzela</small>
                       
                       </div>
                   
