--- a/views/layouts/officeAutomationSoftwarePracticalMenu.ejs
+++ b/views/layouts/officeAutomationSoftwarePracticalMenu.ejs
@@ -53,9 +53,9 @@
                                       
                                       <li><a class="dropdown-item" href="dca103practicalclasschapter14"> Chapter-14 (excel)</a></li>
                                       
-                                      <!--<li><a class="dropdown-item" href="dca103practicalclasschapter15"> Chapter-15 (excel)</a></li>-->
+                                      <li><a class="dropdown-item" href="dca103practicalclasschapter15"> Chapter-15 (excel)</a></li>
                                       
-                                      <!--<li><a class="dropdown-item" href="dca103practicalclasschapter16"> Chapter-16 (excel)</a></li>-->
+                                      <li><a class="dropdown-item" href="dca103practicalclasschapter16"> Chapter-16 (excel)</a></li>
                                      
                                       
                                     </ul>
@@ -72,9 +72,9 @@
                                     
                                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                                       
-                                      <!--<li><a class="dropdown-item" href="dca103practicalclasschapter17"> Chapter-17 (powerpoint)</a></li>-->
+                                      <li><a class="dropdown-item" href="dca103practicalclasschapter17"> Chapter-17 (powerpoint)</a></li>
                                       
-                                      <!--<li><a class="dropdown-item" href="dca103practicalclasschapter18"> Chapter-18 (powerpoint)</a></li>-->
+                                      <li><a class="dropdown-item" href="dca103practicalclasschapter18"> Chapter-18 (powerpoint)</a></li>
                                       
                                       <!--<li><a class="dropdown-item" href="dca103practicalclasschapter19"> Chapter-19 (powerpoint)</a></li>-->
                                       
