--- a/views/dca103practicalclasschapter13.ejs
+++ b/views/dca103practicalclasschapter13.ejs
@@ -111,7 +111,7 @@
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-13</small>
+                        <small>DCA-103 Chapter-13 By Gary Ngursangzela</small>
                       
                       </div>
                   
