--- a/views/dca103practicalclasschapter16.ejs
+++ b/views/dca103practicalclasschapter16.ejs
@@ -38,7 +38,7 @@
                         
                           <div class="d-flex justify-content-between m-1">
                             
-                            <button type="button" class="btn btn-sm btn-outline-secondary"> Ch-12 (Excel)</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary"> Ch-16 (Excel)</button>
                             
                               <!--include word excel powerpoint menu-->
                               
@@ -46,7 +46,7 @@
                             
                           </div>
 
-             <p class="fw-normal mx-auto mt-3">Chapter 12-ah hian <code>UNDERSTANDING CELL REFERENCING IN EXCEL</code> kan en ho dawn a ni. </p>
+                         <p class="fw-normal mx-auto mt-3">Chapter 16-ah hian <code>WORKING WITH GRAPHS AND CHARTS</code> kan en ho dawn a ni. </p>
             
             <hr>
             
@@ -75,8 +75,8 @@
                         
                         <em>
                          
-                      Understanding Cell Referencing in Excel (Relative referencing, Absolute referencing, Mixed
-referencing) (2 MARKS)
+                    Working with Graphs and Charts (Creating charts using ChartWizard, Sizing and moving
+charts, Updating charts, changing the chart type, previewing and printing charts) (3 MARKS)
                   
                         </em> 
             
@@ -107,12 +107,12 @@ referencing) (2 MARKS)
                       
                       <div class="ratio ratio-16x9">
                         
-                          <iframe src="https://www.youtube.com/embed/ad5HrNumHHY" title="dca103 chapter-12 video" allowfullscreen></iframe>
+                          <iframe src="https://www.youtube.com/embed/ExQpl5A54p0" title="dca103 chapter-16 video" allowfullscreen></iframe>
 
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-12 By Gary Ngursangzela</small>
+                        <small>DCA-103 Chapter-16 By Gary Ngursangzela </small>
                       
                       </div>
                   
