--- a/views/dca103practicalclasschapter17.ejs
+++ b/views/dca103practicalclasschapter17.ejs
@@ -38,7 +38,7 @@
                         
                           <div class="d-flex justify-content-between m-1">
                             
-                            <button type="button" class="btn btn-sm btn-outline-secondary"> Ch-12 (Excel)</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary"> Ch-17 (Powerpoint)</button>
                             
                               <!--include word excel powerpoint menu-->
                               
@@ -46,7 +46,9 @@
                             
                           </div>
 
-             <p class="fw-normal mx-auto mt-3">Chapter 12-ah hian <code>UNDERSTANDING CELL REFERENCING IN EXCEL</code> kan en ho dawn a ni. </p>
+             <p class="fw-normal mx-auto mt-3">Chapter 17 atang hian <code>PRESENTATION PACKAGE</code> kan zir tan ang a, chu chu <code>Microsoft Office Powerpoint</code> tihna a ni a.
+            
+            He chapter-ah hian <code>INTRODUCTION TO POWERPOINT</code> kan en ho dawn a ni. </p>
             
             <hr>
             
@@ -75,8 +77,8 @@
                         
                         <em>
                          
-                      Understanding Cell Referencing in Excel (Relative referencing, Absolute referencing, Mixed
-referencing) (2 MARKS)
+                    Introduction to Powerpoint (An introduction to presentation graphics, Basic elements of a slide,
+Different types of slide layouts, Getting started, Creating a presentation) (3 MARKS)
                   
                         </em> 
             
@@ -107,12 +109,12 @@ referencing) (2 MARKS)
                       
                       <div class="ratio ratio-16x9">
                         
-                          <iframe src="https://www.youtube.com/embed/ad5HrNumHHY" title="dca103 chapter-12 video" allowfullscreen></iframe>
+                          <iframe src="https://www.youtube.com/embed/91p5ZulOWJk" title="dca103 chapter-17 video" allowfullscreen></iframe>
 
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-12 By Gary Ngursangzela</small>
+                        <small>DCA-103 Chapter-17 By Gary Ngursangzela </small>
                       
                       </div>
                   
