--- a/views/dca103practicalclasschapter3.ejs
+++ b/views/dca103practicalclasschapter3.ejs
@@ -111,7 +111,7 @@
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-3</small>
+                        <small>DCA-103 Chapter-3 By Gary Ngursangzela</small>
                       
                       </div>
                   
