--- a/views/dca103practicalclasschapter4.ejs
+++ b/views/dca103practicalclasschapter4.ejs
@@ -111,7 +111,7 @@
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-4</small>
+                        <small>DCA-103 Chapter-4 By Gary Ngursangzela</small>
                       
                       </div>
                   
