--- a/views/dca103practicalclasschapter5.ejs
+++ b/views/dca103practicalclasschapter5.ejs
@@ -111,7 +111,7 @@
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-5</small>
+                        <small>DCA-103 Chapter-5 By Gary Ngursangzela</small>
                       
                       </div>
                   
