--- a/views/dca103practicalclasschapter8.ejs
+++ b/views/dca103practicalclasschapter8.ejs
@@ -111,7 +111,7 @@
                           
                         </div>
                         
-                        <small>DCA-103 Chapter-8</small>
+                        <small>DCA-103 Chapter-8 By Gary Ngursangzela</small>
                       
                       </div>
                   
