--- a/views/dca103practicalwelcomepage.ejs
+++ b/views/dca103practicalwelcomepage.ejs
@@ -188,29 +188,29 @@
                                 
                                 </div>
                                 
-                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                            <!--  <a href="dca103practicalclasschapter15"><button type="button" class="btn btn-link m-2">Chapter-15 (excel) <i class="fas fa-angle-right"></i></button></a>-->
+                              <a href="dca103practicalclasschapter15"><button type="button" class="btn btn-link m-2">Chapter-15 (excel) <i class="fas fa-angle-right"></i></button></a>
                                 
-                            <!--    </div>-->
+                                </div>
                                 
-                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                            <!--  <a href="dca103practicalclasschapter16"><button type="button" class="btn btn-link m-2">Chapter-16 (excel) <i class="fas fa-angle-right"></i></button></a>-->
+                              <a href="dca103practicalclasschapter16"><button type="button" class="btn btn-link m-2">Chapter-16 (excel) <i class="fas fa-angle-right"></i></button></a>
                                 
-                            <!--    </div>-->
+                                </div>
                                 
-                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                            <!--  <a href="dca103practicalclasschapter17"><button type="button" class="btn btn-link m-2">Chapter-17 (powerpoint) <i class="fas fa-angle-right"></i></button></a>-->
+                              <a href="dca103practicalclasschapter17"><button type="button" class="btn btn-link m-2">Chapter-17 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
                                 
-                            <!--    </div>-->
+                                </div>
                                 
-                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                            <!--  <a href="dca103practicalclasschapter18"><button type="button" class="btn btn-link m-2">Chapter-18 (powerpoint) <i class="fas fa-angle-right"></i></button></a>-->
+                              <a href="dca103practicalclasschapter18"><button type="button" class="btn btn-link m-2">Chapter-18 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
                                 
-                            <!--    </div>-->
+                                </div>
                                 
                             <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
                             
