--- a/views/photoGallery.ejs
+++ b/views/photoGallery.ejs
@@ -9,7 +9,204 @@
     
     <%- include('layouts/navbar') -%>
     
-    <!-- --------------main container section------------------ -->
+    <!--main container section-->
+    <!--2020 session-->
+    <div class="container border-bottom">
+          <h5 class="p-3">2021 Session</h5>
+        <div class="row mx-auto">
+<div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/kolasib_building.jpeg">
+        <img src="/img/photoGallery/kolasib_building.jpeg" alt="kolasib_building" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Jojo Computer Institute, Kolasib Branch.</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/kolasib_office.jpeg">
+        <img src="/img/photoGallery/kolasib_office.jpeg" alt="kolasib_office" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Kolasib Office Room.</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/kolasib_student.jpeg">
+        <img src="/img/photoGallery/kolasib_student.jpeg" alt="kolasib_student" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted"> Kolasib Class Kal te: 13/10/2021</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+    <div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/kolasib_classroom (6).jpeg">
+        <img src="/img/photoGallery/kolasib_classroom (6).jpeg" alt="kolasib_classroom (6)" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted"> Kolasib Branch classroom.</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+<div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/kolasib_classroom (8).jpeg">
+        <img src="/img/photoGallery/kolasib_classroom (8).jpeg" alt="kolasib_classroom (8)" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Kolasib Branch classroom.</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/kolasib_classroom (9).jpeg">
+        <img src="/img/photoGallery/kolasib_classroom (9).jpeg" alt="kolasib_classroom (9)" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Kolasib Branch classroom.</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/kolasib_classroom.jpeg">
+        <img src="/img/photoGallery/kolasib_classroom.jpeg" alt="kolasib_classroom" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Kolasib Branch classroom.</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/Aizawl_classroom.jpeg">
+        <img src="/img/photoGallery/Aizawl_classroom.jpeg" alt="Aizawl_classroom" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Aizawl Chanmari: 13/10/2021</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/Aizawl_classroom (2).jpeg">
+        <img src="/img/photoGallery/Aizawl_classroom (2).jpeg" alt="Aizawl_classroom2" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Aizawl Chanmari: 13/10/2021</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+  </div>
+  </div>
+    <!--2020 session-->
+    <div class="container border-bottom">
+          <h5 class="p-3">Dec 2020 Session</h5>
+        <div class="row mx-auto">
+<div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/Pu_Zuala.jpeg">
+        <img src="/img/photoGallery/Pu_Zuala.jpeg" alt="Pu_Zuala" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Pu Vl Ngaihzuala hi zirlai kan neih tawhah chuan a upa ber a la ni. 
+          July 2021 khan DCA a pass chhuak. 
+          Amah hi Electric Engineer niin, 
+          tunah hian Aizawl-ah PHE, Section Officer in a thawk mek.</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/josei.jpeg">
+        <img src="/img/photoGallery/josei.jpeg" alt="josei" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Josephine, Mission Vengthlang Cl-IX zir mekin kan institute-ah computer a rawn zir ve thin.</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/davida_ix.jpeg">
+        <img src="/img/photoGallery/davida_ix.jpeg" alt="davida class-ix" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Davida, Aizawl venglai Cl-IX zir mekin kan institute-ah computer a rawn zir ve thin.</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+    <div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/chanmari_practical_exam (2).jpeg">
+        <img src="/img/photoGallery/chanmari_practical_exam (2).jpeg" alt="practical exam2" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Practical Exam 19/02/2021.</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+<div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/chanmari_practical_exam (3).jpeg">
+        <img src="/img/photoGallery/chanmari_practical_exam (3).jpeg" alt="practical exam3" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Practical Exam 19/02/2021.</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/chanmari_practical_exam (4).jpeg">
+        <img src="/img/photoGallery/chanmari_practical_exam (4).jpeg" alt="practical exam4" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Practical Exam 19/02/2021.</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/chanmari_practical_exam (5).jpeg">
+        <img src="/img/photoGallery/chanmari_practical_exam (5).jpeg" alt="practical exam5" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Practical Exam 19/02/2021.</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/chanmari_practical_exam (6).jpeg">
+        <img src="/img/photoGallery/chanmari_practical_exam (6).jpeg" alt="practical exam6" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Practical Exam 19/02/2021.</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-xs-12">
+    <div class="thumbnail card shadow-lg p-2 mb-3 bg-white rounded">
+      <a href="/img/photoGallery/chanmari_practical_exam.jpeg">
+        <img src="/img/photoGallery/chanmari_practical_exam.jpeg" alt="practical exam1" style="width:100%">
+        <div class="caption">
+          <figcaption class="figure-caption p-2 text-muted">Practical Exam 19/02/2021.</figcaption>
+        </div>
+      </a>
+    </div>
+  </div>
+  </div>
+  </div>
+  
+  <!--2019 session-->
         <div class="container border-bottom">
           <h5 class="p-3">Dec 2019 Session</h5>
         <div class="row mx-auto">
