--- a/views/dcapracticalwelcomepage.ejs
+++ b/views/dcapracticalwelcomepage.ejs
@@ -385,17 +385,17 @@
                                 
                                 </div>
                                 
-                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                            <!--  <a href="dca103practicalclasschapter19"><button type="button" class="btn btn-link m-2">Chapter-19 (pptx) <i class="fas fa-angle-right"></i></button></a>-->
+                              <a href="dca103practicalclasschapter19"><button type="button" class="btn btn-link m-2">Chapter-19 (pptx) <i class="fas fa-angle-right"></i></button></a>
                                 
-                            <!--    </div>-->
+                                </div>
                                 
-                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                            <!--  <a href="dca103practicalclasschapter20"><button type="button" class="btn btn-link m-2">Chapter-20 (pptx) <i class="fas fa-angle-right"></i></button></a>-->
+                              <a href="dca103practicalclasschapter20"><button type="button" class="btn btn-link m-2">Chapter-20 (pptx) <i class="fas fa-angle-right"></i></button></a>
                                 
-                            <!--    </div>-->
+                                </div>
                               </div> <!--third subject row end-->
 
                       </div>
