--- a/views/layouts/officeAutomationSoftwarePracticalMenu.ejs
+++ b/views/layouts/officeAutomationSoftwarePracticalMenu.ejs
@@ -76,9 +76,9 @@
                                       
                                       <li><a class="dropdown-item" href="dca103practicalclasschapter18"> Chapter-18 (powerpoint)</a></li>
                                       
-                                      <!--<li><a class="dropdown-item" href="dca103practicalclasschapter19"> Chapter-19 (powerpoint)</a></li>-->
+                                      <li><a class="dropdown-item" href="dca103practicalclasschapter19"> Chapter-19 (powerpoint)</a></li>
                                       
-                                      <!--<li><a class="dropdown-item" href="dca103practicalclasschapter20"> Chapter-20 (powerpoint)</a></li>-->
+                                      <li><a class="dropdown-item" href="dca103practicalclasschapter20"> Chapter-20 (powerpoint)</a></li>
                                       
                                     </ul>
                                   
