--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -295,7 +295,7 @@
           %>
           <tr>
               
-              <td colspan="3" class="text-center border text-success"> Assignment chhan i la nei lo va, a chunga lessons button hi click la, assignment chhang ang che. </td>
+              <td colspan="3" class="text-center border text-success"> Assignment chhan i la nei lo va, learn lesson hnuaia Learn Theory-ah hian lut la, assignment chhang ang che. </td>
               
             </tr>
           
