--- a/views/dca103practicalwelcomepage.ejs
+++ b/views/dca103practicalwelcomepage.ejs
@@ -202,27 +202,27 @@
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                              <a href="dca103practicalclasschapter17"><button type="button" class="btn btn-link m-2">Chapter-17 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103practicalclasschapter17"><button type="button" class="btn btn-link m-2">Ch-17 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                              <a href="dca103practicalclasschapter18"><button type="button" class="btn btn-link m-2">Chapter-18 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103practicalclasschapter18"><button type="button" class="btn btn-link m-2">Ch-18 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
                                 
-                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                            <!--  <a href="dca103practicalclasschapter19"><button type="button" class="btn btn-link m-2">Chapter-19 (powerpoint) <i class="fas fa-angle-right"></i></button></a>-->
+                              <a href="dca103practicalclasschapter19"><button type="button" class="btn btn-link m-2">Ch-19 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
                                 
-                            <!--    </div>-->
+                                </div>
                                 
-                            <!--    <div class="col-lg-3 col-md-6 col-sm-6"> -->
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                            <!--  <a href="dca103practicalclasschapter20"><button type="button" class="btn btn-link m-2">Chapter-20 (powerpoint) <i class="fas fa-angle-right"></i></button></a>-->
+                              <a href="dca103practicalclasschapter20"><button type="button" class="btn btn-link m-2">Ch-20 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
                                 
-                            <!--    </div>-->
+                                </div>
                                 
                                 <% } %>
 
