--- a/views/layouts/subjectMenuPractical.ejs
+++ b/views/layouts/subjectMenuPractical.ejs
@@ -20,9 +20,9 @@
                   
                   <!--<li><a class="dropdown-item" href="dca104practicalwelcomepage">DCA-104</a></li>-->
                   
-                  <!--<li><a class="dropdown-item" href="dca105practicalwelcomepage">DCA-105</a></li>-->
+                  <li><a class="dropdown-item" href="dca105practicalwelcomepage">DCA-105</a></li>
                   
-                  <!--<li><a class="dropdown-item" href="dca106practicalwelcomepage">DCA-106</a></li>-->
+                  <li><a class="dropdown-item" href="dca106practicalwelcomepage">DCA-106</a></li>
                 
                 </ul>
               
