--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -90,7 +90,7 @@
       <img src="/img/slide4.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-md-block text-white">
         <h5>Admission Open</h5>
-        <p>December Batch Admission hawn mek a ni. I lo sawi darh ve dawn nia.</p>
+        <p>Admission hawn mek a ni a; I lo sawi darh ve dawn nia.</p>
       </div>
     </div>
   </div>
