--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,7 +21,7 @@
     <main class="container">
  <div class="mission-header mt-4 p-3 pb-md-4 mx-auto text-center">
     <h1 class="display-6 fw-normal pb-2">Objective</h1>
-    <p class="fs-5 text-muted objective">Khawiah pawh, internet signal awmna apiangah mi'n computer a zir theihna tur leh phone atang pawha thiam taka an lo inzir theihna tura duan a ni.</p>
+    <p class="fs-5 text-muted objective">Khawiah pawh, internet signal awmna apiangah mi'n computer a zir theihna tur leh phone atang pawha thiam taka a lo inzir theihna tura duan a ni.</p>
     </div>
    </div>   
 </main>
