admission year text box added

--- a/views/dca1stSemOldQuestion.ejs
+++ b/views/dca1stSemOldQuestion.ejs
@@ -52,21 +52,21 @@
             
              <hr class="text-muted">
             
-           <!-- <div class="list-group text-center mx-auto">
+            <div class="list-group text-center mx-auto">
               
-              <a href="/pdfs/101dec2014-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-primary mb-1 mx-auto" style="max-width: 300px">DCA-101 : Nov 2021 Exam</a>
+              <a href="/pdfs/dca101_nov8_2021_question.pdf" class="list-group-item list-group-item-action list-group-item-primary mb-1 mx-auto" style="max-width: 300px">DCA-101 : Nov 2021 Exam</a>
 
-              <a href="/pdfs/102dec2014-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-success mb-1 mx-auto" style="max-width: 300px">DCA-102 : Nov 2021 Exam</a>
+              <a href="/pdfs/dca102_nov8_2021_question.pdf" class="list-group-item list-group-item-action list-group-item-success mb-1 mx-auto" style="max-width: 300px">DCA-102 : Nov 2021 Exam</a>
 
-              <a href="/pdfs/103dec2014-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-warning mb-1 mx-auto" style="max-width: 300px">DCA-103 : Nov 2021 Exam</a>
+              <a href="/pdfs/dca103_nov8_2021_question.pdf" class="list-group-item list-group-item-action list-group-item-warning mb-1 mx-auto" style="max-width: 300px">DCA-103 : Nov 2021 Exam</a>
 
-              <a href="/pdfs/104dec2014-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-danger mb-1 mx-auto" style="max-width: 300px">DCA-104 : Nov 2021 Exam</a>
+              <a href="/pdfs/dca104_nov9_2021_question.pdf" class="list-group-item list-group-item-action list-group-item-danger mb-1 mx-auto" style="max-width: 300px">DCA-104 : Nov 2021 Exam</a>
 
-              <a href="/pdfs/105dec2015-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-dark mb-1 mx-auto" style="max-width: 300px">DCA-105 : Nov 2021 Exam</a>
+              <a href="/pdfs/dca105_nov9_2021_question.pdf" class="list-group-item list-group-item-action list-group-item-dark mb-1 mx-auto" style="max-width: 300px">DCA-105 : Nov 2021 Exam</a>
 
-              <a href="/pdfs/106dec2014-jun2019.pdf" class="list-group-item list-group-item-action list-group-item-primary mb-1 mx-auto" style="max-width: 300px">DCA-106 : Nov 2021 Exam</a>
+              <a href="/pdfs/dca106_nov9_2021_question.pdf" class="list-group-item list-group-item-action list-group-item-primary mb-1 mx-auto" style="max-width: 300px">DCA-106 : Nov 2021 Exam</a>
   
-            </div>-->
+            </div>
         
             </div>
         
