--- a/views/layouts/studentBatchMenu.ejs
+++ b/views/layouts/studentBatchMenu.ejs
@@ -1,12 +1,10 @@
 <div class="d-flex justify-content-around flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 border-bottom">
-        
-        
             <a href="/allStdList"><button type="button" class="btn btn-sm btn-outline-primary m-1">  <i class="fas fa-users"></i> All Students  </button></a>
             <a href="/june2021Batch"><button type="button" class="btn btn-sm btn-outline-primary m-1">  <i class="fas fa-user-tie"></i> June 2021 Batch</button></a>
             <a href="/december2021Batch"><button type="button" class="btn btn-sm btn-outline-primary m-1">
               <i class="fas fa-user-tie"></i> December 2021 Batch
             </button></a>
-          
-        
-        
+            <a href="/june2022Batch"><button type="button" class="btn btn-sm btn-outline-primary m-1">
+              <i class="fas fa-user-tie"></i> June 2022 Batch
+            </button></a>
       </div>
