--- a/views/june2021Batch.ejs
+++ b/views/june2021Batch.ejs
@@ -48,7 +48,7 @@
       
       for(var i=0; i < students.length; i++) { 
       
-      if(students[i].batchSession == 'june') {
+      if(students[i].batchSession == 'june' && students[i].regn < 279 ) {
       
       %>
       
