--- a/views/june2022Batch.ejs
+++ b/views/june2022Batch.ejs
@@ -53,7 +53,7 @@
         
       for(var i=0; i < students.length; i++) { 
       
-      if( students[i].batchSession == 'december' && students[i].regn > 278 && students[i].regn < 504 ) {
+      if(students[i].batchSession == 'june' && students[i].admissionYear == '2022') {
       
       noOfBatchStd++;
       
@@ -65,7 +65,7 @@
       
       for(var i=0; i < students.length; i++) { 
       
-      if(students[i].batchSession == 'december' && students[i].regn > 278 && students[i].regn < 504 ) {
+      if(students[i].batchSession == 'june' && students[i].admissionYear == '2022') {
       
       %>
       
